<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/main_bg"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <!-- Боковая панель (меню) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/side"
        android:layout_width="65dp"
        android:layout_height="match_parent"
        android:background="@color/side_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/menu_main"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/menu_main"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/menu_about_us"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/menu_about_us"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_main" />

        <TextView
            android:id="@+id/menu_contacts"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/menu_contacts"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_about_us" />

        <ImageView
            android:id="@+id/hot_deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/desc_hot_deal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_hot_deal" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Заголовок -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/header_course"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/side"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/header_app"
        android:textColor="@color/secondary"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/header_course"
        app:layout_constraintStart_toEndOf="@+id/header_course"
        app:layout_constraintTop_toTopOf="@+id/header_course"
        tools:ignore="TextContrastCheck" />


    <!-- Фильтр и список категорий -->
    <ImageView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/side"
        app:layout_constraintTop_toBottomOf="@+id/header_course"
        android:contentDescription="@string/desc_filter"
        app:srcCompat="@drawable/ic_filter"
        tools:ignore="ImageContrastCheck" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filter"
        app:layout_constraintTop_toTopOf="@+id/filter"
        tools:listitem="@layout/category_item"/>


    <!-- Список курсов -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/course_recycler"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/side"
        app:layout_constraintTop_toBottomOf="@+id/category_recycler" />


    <!-- Корзина -->
    <Button
        android:id="@+id/cart"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="@font/montserrat_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0.05"
        android:text="@string/btn_basket"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:cornerRadius="20dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/side" />

</androidx.constraintlayout.widget.ConstraintLayout>