<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/course_page_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CoursePageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Картника -->
        <ImageView
            android:id="@+id/course_page_img"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/ic_java"
            android:scaleType="centerCrop"/>


        <!-- Заголовок -->
        <TextView
            android:id="@+id/course_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="Название курса"
            android:textAlignment="center"
            android:textSize="25sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:letterSpacing="0.03"/>


        <!-- Строка статичных TextView -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/course_tv_start_course"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="70dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/course_tv_level"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- Строка динамичных TextView -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/course_page_date"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="Дата"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/course_page_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="70dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="Уровень:"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- Описание курса -->
        <TextView
            android:id="@+id/course_page_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/course_page_desc"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"/>


        <!-- Кнопка для добавления данного курса в корзину -->
        <Button
            android:id="@+id/course_page_add_to_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/montserrat_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0.03"
            android:text="@string/course_page_add_to_basket"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="20dp"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/side" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>